--- a/app/src/main/res/layout/movie_poster_list_item.xml
+++ b/app/src/main/res/layout/movie_poster_list_item.xml
@@ -8,6 +8,5 @@
     <ImageView
         android:id="@+id/movie_poster"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true" />
+        android:layout_height="277dp" />
 </LinearLayout>
