--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,86 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailsActivity">
-
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/movie_details_title"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:text="I am a Movie" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/movie_details_poster"
-            android:layout_width="185dp"
+            android:layout_width="187dp"
             android:layout_height="277dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
-            android:scaleType="fitXY" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/movie_details_title"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="4dp"
-                android:textIsSelectable="true"
-                android:textStyle="bold"
-                android:layout_marginStart="4dp"
-                android:text="I'm a movie"/>
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="293dp">
-
-        <TextView
-            android:id="@+id/movie_details_rating"
-            style="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="I'm a rating"
-            android:textIsSelectable="true" />
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_sort_white_24dp" />
 
         <TextView
             android:id="@+id/movie_details_release_date"
-            style="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:text="I'm a release date"
-            android:textIsSelectable="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/movie_details_poster"
+            android:layout_marginEnd="54dp"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:text="10/12/2014"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="54dp" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/movie_details_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="28dp"
+            android:layout_marginTop="94dp"
+            android:paddingBottom="8dp"
+            android:text="6.8 / 10 (1245 votes)"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="28dp" />
+
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/movie_overview"
-        style="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="510dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:text="I'm a bunch of text that describes the movie"
-        android:textIsSelectable="true"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:id="@+id/movie_details_overview"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="Lorem ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum" />
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
