--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,16 +6,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp" />
 
         <TextView
             android:id="@+id/movie_details_title"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_height="128dp"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:text="I am a Movie" />
+            android:text="I am a Movie"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@color/colorAccent"
+            android:textSize="36dp" />
 
     </LinearLayout>
 
@@ -34,37 +43,89 @@
             android:src="@drawable/ic_sort_white_24dp" />
 
         <TextView
+            android:id="@+id/movie_details_release_date_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/movie_details_poster"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/movie_details_poster"
+            android:layout_toRightOf="@+id/movie_details_poster"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:text="Release date:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="italic" />
+
+        <TextView
             android:id="@+id/movie_details_release_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/movie_details_poster"
-            android:layout_marginEnd="54dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:text="10/12/2014"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="54dp" />
+            android:layout_below="@+id/movie_details_release_date_header"
+            android:layout_toRightOf="@+id/movie_details_poster"
+            android:layout_toEndOf="@+id/movie_details_poster" />
+
+        <TextView
+            android:id="@+id/movie_details_rating_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/movie_details_release_date"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/movie_details_poster"
+            android:layout_toRightOf="@+id/movie_details_poster"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:text="User rating:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/movie_details_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="28dp"
-            android:layout_marginTop="94dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
             android:paddingBottom="8dp"
-            android:text="6.8 / 10 (1245 votes)"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="28dp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:text="6.8"
+            android:layout_below="@+id/movie_details_rating_header"
+            android:layout_toRightOf="@+id/movie_details_poster"
+            android:layout_toEndOf="@+id/movie_details_poster" />
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/movie_details_overview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Lorem ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/movie_details_overview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:text="Lorem ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textSize="16dp" />
+
+    </RelativeLayout>
 
 </LinearLayout>
