--- a/app/src/main/res/layout/movie_poster_list_item.xml
+++ b/app/src/main/res/layout/movie_poster_list_item.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="3dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/movie_poster"
         android:layout_width="match_parent"
-        android:layout_height="277dp" />
+        android:layout_height="277dp"
+        android:scaleType="fitXY"/>
 </LinearLayout>
