--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -20,11 +20,10 @@
             android:background="@color/colorPrimary"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:text="I am a Movie"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/colorAccent"
-            android:textSize="36dp" />
+            android:textSize="36sp" />
 
     </LinearLayout>
 
@@ -37,10 +36,10 @@
 
         <ImageView
             android:id="@+id/movie_details_poster"
+            android:contentDescription="@string/movie_poster"
             android:layout_width="187dp"
             android:layout_height="277dp"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_sort_white_24dp" />
+            android:layout_margin="16dp" />
 
         <TextView
             android:id="@+id/movie_details_release_date_header"
@@ -55,7 +54,7 @@
             android:layout_toRightOf="@+id/movie_details_poster"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:text="Release date:"
+            android:text="@string/release_date"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="italic" />
 
@@ -69,7 +68,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:text="10/12/2014"
             android:layout_below="@+id/movie_details_release_date_header"
             android:layout_toRightOf="@+id/movie_details_poster"
             android:layout_toEndOf="@+id/movie_details_poster" />
@@ -87,7 +85,7 @@
             android:layout_toRightOf="@+id/movie_details_poster"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:text="User rating:"
+            android:text="@string/user_rating"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="italic" />
 
@@ -101,7 +99,6 @@
             android:layout_marginTop="4dp"
             android:paddingBottom="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:text="6.8"
             android:layout_below="@+id/movie_details_rating_header"
             android:layout_toRightOf="@+id/movie_details_poster"
             android:layout_toEndOf="@+id/movie_details_poster" />
@@ -122,9 +119,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="4dp"
-            android:text="Lorem ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum ipsum"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
