--- a/app/src/main/res/layout/movie_poster_list_item.xml
+++ b/app/src/main/res/layout/movie_poster_list_item.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/movie_poster"
+        android:contentDescription="@string/movie_poster"
         android:layout_width="match_parent"
         android:layout_height="277dp"
         android:scaleType="fitXY"/>
