--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,15 @@
         android:id="@+id/movies_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="@dimen/medium_margin"
         android:text="@string/error_message"
-        android:textSize="20sp"
+        android:textSize="@dimen/subhead_text"
         android:visibility="invisible" />
 
     <ProgressBar
         android:id="@+id/loading_indicator"
-        android:layout_height="42dp"
-        android:layout_width="42dp"
+        android:layout_height="@dimen/large_margin"
+        android:layout_width="@dimen/large_margin"
         android:layout_gravity="center"
         android:visibility="invisible" />
 
