--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,103 +25,103 @@
             android:textColor="@color/colorAccent"
             android:textSize="36sp" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/movie_details_poster"
+                android:layout_width="187dp"
+                android:layout_height="277dp"
+                android:layout_margin="16dp"
+                android:contentDescription="@string/movie_poster" />
+
+            <TextView
+                android:id="@+id/movie_details_release_date_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/movie_details_poster"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_toEndOf="@+id/movie_details_poster"
+                android:layout_toRightOf="@+id/movie_details_poster"
+                android:gravity="center"
+                android:paddingBottom="8dp"
+                android:text="@string/release_date"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/movie_details_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_details_release_date_header"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_toEndOf="@+id/movie_details_poster"
+                android:layout_toRightOf="@+id/movie_details_poster"
+                android:gravity="center"
+                android:paddingBottom="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            <TextView
+                android:id="@+id/movie_details_rating_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_details_release_date"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_toEndOf="@+id/movie_details_poster"
+                android:layout_toRightOf="@+id/movie_details_poster"
+                android:gravity="center"
+                android:paddingBottom="8dp"
+                android:text="@string/user_rating"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/movie_details_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_details_rating_header"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="@dimen/small_margin"
+                android:layout_toEndOf="@+id/movie_details_poster"
+                android:layout_toRightOf="@+id/movie_details_poster"
+                android:paddingBottom="@dimen/medium_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/medium_margin"
+            android:paddingTop="@dimen/medium_margin"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/movie_details_overview"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/small_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textSize="@dimen/body_text" />
+
+        </RelativeLayout>
+
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:visibility="visible">
-
-        <ImageView
-            android:id="@+id/movie_details_poster"
-            android:contentDescription="@string/movie_poster"
-            android:layout_width="187dp"
-            android:layout_height="277dp"
-            android:layout_margin="16dp" />
-
-        <TextView
-            android:id="@+id/movie_details_release_date_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/movie_details_poster"
-            android:layout_marginBottom="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/movie_details_poster"
-            android:layout_toRightOf="@+id/movie_details_poster"
-            android:gravity="center"
-            android:paddingBottom="8dp"
-            android:text="@string/release_date"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/movie_details_release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:gravity="center"
-            android:paddingBottom="8dp"
-            android:layout_below="@+id/movie_details_release_date_header"
-            android:layout_toRightOf="@+id/movie_details_poster"
-            android:layout_toEndOf="@+id/movie_details_poster" />
-
-        <TextView
-            android:id="@+id/movie_details_rating_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/movie_details_release_date"
-            android:layout_marginBottom="0dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/movie_details_poster"
-            android:layout_toRightOf="@+id/movie_details_poster"
-            android:gravity="center"
-            android:paddingBottom="8dp"
-            android:text="@string/user_rating"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/movie_details_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:paddingBottom="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:layout_below="@+id/movie_details_rating_header"
-            android:layout_toRightOf="@+id/movie_details_poster"
-            android:layout_toEndOf="@+id/movie_details_poster" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:visibility="visible">
-
-        <TextView
-            android:id="@+id/movie_details_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textSize="16sp" />
-
-    </RelativeLayout>
-
-</LinearLayout>
+</ScrollView>
