Add favorites UI

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,27 +17,28 @@
         <TextView
             android:id="@+id/movie_details_title"
             android:layout_width="match_parent"
-            android:layout_height="128dp"
+            android:layout_height="@dimen/movie_title_height"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:paddingBottom="8dp"
+            android:paddingBottom="@dimen/medium_padding"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/colorAccent"
-            android:textSize="36sp" />
+            android:textSize="36sp"
+            tools:text="I AM A MOVIE THAT IS AWESOME"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
+            android:paddingBottom="@dimen/medium_padding"
+            android:paddingTop="@dimen/medium_padding"
             android:visibility="visible">
 
             <ImageView
                 android:id="@+id/movie_details_poster"
-                android:layout_width="187dp"
-                android:layout_height="277dp"
-                android:layout_margin="16dp"
+                android:layout_width="@dimen/poster_width"
+                android:layout_height="@dimen/poster_height"
+                android:layout_margin="@dimen/large_margin"
                 android:contentDescription="@string/movie_poster" />
 
             <TextView
@@ -44,14 +46,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/movie_details_poster"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="@dimen/no_margin"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/large_margin"
                 android:layout_toEndOf="@+id/movie_details_poster"
                 android:layout_toRightOf="@+id/movie_details_poster"
                 android:gravity="center"
-                android:paddingBottom="8dp"
+                android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/release_date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="italic" />
@@ -61,28 +63,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_details_release_date_header"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/small_margin"
                 android:layout_toEndOf="@+id/movie_details_poster"
                 android:layout_toRightOf="@+id/movie_details_poster"
                 android:gravity="center"
-                android:paddingBottom="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                android:paddingBottom="@dimen/medium_padding"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                tools:text="10/19/2003"/>
 
             <TextView
                 android:id="@+id/movie_details_rating_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_details_release_date"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="@dimen/no_margin"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/large_margin"
                 android:layout_toEndOf="@+id/movie_details_poster"
                 android:layout_toRightOf="@+id/movie_details_poster"
                 android:gravity="center"
-                android:paddingBottom="8dp"
+                android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/user_rating"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="italic" />
@@ -92,22 +95,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_details_rating_header"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginBottom="@dimen/large_margin"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 android:layout_toEndOf="@+id/movie_details_poster"
                 android:layout_toRightOf="@+id/movie_details_poster"
-                android:paddingBottom="@dimen/medium_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                android:paddingBottom="@dimen/medium_padding"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                tools:text="8.1/10"/>
+
+            <ImageView
+                android:id="@+id/favorite_movie_icon"
+                android:contentDescription="@string/favorite_movie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/large_margin"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/small_margin"
+                android:layout_marginEnd="@dimen/small_margin"
+                android:layout_marginStart="@dimen/large_margin"
+                android:layout_marginTop="@dimen/small_margin"
+                android:layout_below="@+id/movie_details_rating"
+                android:layout_toRightOf="@+id/movie_details_poster"
+                android:layout_toEndOf="@+id/movie_details_poster"
+                android:src="@drawable/ic_favorite_border_black_24px" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/medium_margin"
-            android:paddingTop="@dimen/medium_margin"
+            android:paddingBottom="@dimen/medium_padding"
+            android:paddingTop="@dimen/medium_padding"
             android:visibility="visible">
 
             <TextView
@@ -118,7 +138,8 @@
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textSize="@dimen/body_text" />
+                android:textSize="@dimen/body_text"
+                tools:text="this is a movie that is about a bunch of things"/>
 
         </RelativeLayout>
 
