--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="small_margin">4dp</dimen>
     <dimen name="medium_margin">8dp</dimen>
     <dimen name="large_margin">16dp</dimen>
+    <dimen name="no_margin">0dp</dimen>
+    <dimen name="medium_padding">8dp</dimen>
+    <dimen name="poster_width">187dp</dimen>
+    <dimen name="poster_height">277dp</dimen>
+    <dimen name="movie_title_height">128dp</dimen>
 </resources>
