--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -28,7 +28,7 @@
             android:paddingBottom="@dimen/medium_padding"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorTextPrimary"
             android:textSize="36sp"
             app:layout_constraintTop_toBottomOf="@id/movie_title_divider"
             tools:text="I AM A MOVIE THAT IS AWESOME" />
@@ -66,7 +66,7 @@
                 android:gravity="center"
                 android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/release_date"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textStyle="italic" />
 
             <TextView
@@ -77,9 +77,9 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:gravity="center"
                 android:paddingBottom="@dimen/medium_padding"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 tools:text="10/19/2003" />
 
             <TextView
@@ -94,7 +94,7 @@
                 android:gravity="center"
                 android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/user_rating"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textStyle="italic" />
 
             <TextView
@@ -107,7 +107,7 @@
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 android:paddingBottom="@dimen/medium_padding"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="8.1/10" />
 
             <TextView
@@ -122,7 +122,7 @@
                 android:gravity="center"
                 android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/favorite"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textStyle="italic" />
 
             <ImageView
@@ -159,8 +159,8 @@
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 android:layout_marginBottom="@dimen/small_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textSize="@dimen/body_text"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="this is a movie that is about a bunch of things"/>
 
             <View
@@ -171,7 +171,7 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorLight" />
 
         </RelativeLayout>
 
@@ -183,7 +183,7 @@
             android:layout_marginTop="@dimen/large_margin"
             android:gravity="center"
             android:text="@string/trailers"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/trailers_list"
             app:layout_constraintTop_toBottomOf="@id/movie_overview_container" />
@@ -193,9 +193,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/large_margin"
-            app:layout_constraintTop_toBottomOf="@id/movie_trailers_header"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/movie_trailers_header" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
