build reviews setup

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -42,14 +42,12 @@
             android:contentDescription="@string/movie_poster"
             app:layout_constraintBottom_toBottomOf="@+id/movie_details_container"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_details_title"
-            android:layout_marginLeft="@dimen/large_margin" />
+            app:layout_constraintTop_toBottomOf="@id/movie_details_title" />
 
         <RelativeLayout
             android:id="@+id/movie_details_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/large_margin"
             android:layout_marginTop="@dimen/large_margin"
             app:layout_constraintLeft_toRightOf="@+id/movie_details_poster"
             app:layout_constraintTop_toBottomOf="@+id/movie_details_title"
@@ -132,12 +130,10 @@
                 android:layout_below="@+id/movie_details_favorite_header"
                 android:layout_marginBottom="@dimen/large_margin"
                 android:layout_marginEnd="@dimen/small_margin"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/small_margin"
                 android:layout_marginStart="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 android:contentDescription="@string/favorite_movie"
-                android:src="@drawable/ic_favorite_border_black_24px" />
+                app:srcCompat="@drawable/ic_favorite_border_black_24px" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -175,29 +171,84 @@
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/movie_trailers_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/large_margin"
-            android:layout_marginTop="@dimen/large_margin"
-            android:gravity="center"
-            android:text="@string/trailers"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textStyle="italic"
-            app:layout_constraintStart_toStartOf="@+id/trailers_list"
-            app:layout_constraintTop_toBottomOf="@id/movie_overview_container" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trailers_list"
+        <RelativeLayout
+            android:id="@+id/movie_trailers_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/large_margin"
-            android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_trailers_header" />
+            app:layout_constraintTop_toBottomOf="@id/movie_overview_container" >
+
+            <TextView
+                android:id="@+id/movie_trailers_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/trailers_list"
+                android:layout_marginTop="@dimen/large_margin"
+                android:gravity="center"
+                android:text="@string/trailers"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textStyle="italic" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/trailers_list"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/movie_trailers_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/large_margin"
+                android:layout_marginTop="4dp" />
+
+            <View
+                android:id="@+id/review_divider"
+                android:layout_below="@id/trailers_list"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:background="@color/colorLight" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/movie_trailers_container" >
+
+            <TextView
+                android:id="@+id/movie_reviews_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/reviews_list"
+                android:layout_marginTop="@dimen/large_margin"
+                android:gravity="center"
+                android:text="@string/reviews"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textStyle="italic" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/reviews_list"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/movie_reviews_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/large_margin"
+                android:layout_marginTop="4dp" />
+
+            <View
+                android:id="@+id/end_divider"
+                android:layout_below="@id/reviews_list"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/large_margin"
+                android:layout_marginRight="@dimen/large_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:background="@color/colorLight" />
+
+        </RelativeLayout>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
