--- a/app/src/main/res/menu/sort_movies.xml
+++ b/app/src/main/res/menu/sort_movies.xml
@@ -8,7 +8,7 @@
         app:showAsAction="ifRoom" >
         <menu>
             <group
-                android:id="@+id/movies_sort_by">
+                android:id="@+id/movies_sort_by" >
                 <item
                     android:id="@+id/sort_by_rating"
                     android:title="@string/rating" />
@@ -16,6 +16,9 @@
                     android:id="@+id/sort_by_popularity"
                     android:checked="true"
                     android:title="@string/popularity" />
+                <item
+                    android:id="@+id/show_favorites"
+                    android:title="@string/favorites" />
             </group>
         </menu>
     </item>
