--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -167,7 +167,7 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorLight" />
+                android:background="@color/colorPrimary" />
 
         </RelativeLayout>
 
@@ -207,7 +207,7 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorLight" />
+                android:background="@color/colorPrimary" />
 
         </RelativeLayout>
 
@@ -246,7 +246,7 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorLight" />
+                android:background="@color/colorPrimary" />
 
         </RelativeLayout>
 
