--- a/app/src/main/res/menu/sort_movies.xml
+++ b/app/src/main/res/menu/sort_movies.xml
@@ -2,10 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/sort_menu"
-        android:orderInCategory="1"
         android:id="@+id/action_sort"
-        app:showAsAction="ifRoom" >
+        android:title="@string/sort_menu"
+        android:icon="@drawable/ic_list_white_24px"
+        android:visible="true"
+        app:showAsAction="always" >
         <menu>
             <group
                 android:id="@+id/movies_sort_by" >
