--- a/app/src/main/res/menu/sort_movies.xml
+++ b/app/src/main/res/menu/sort_movies.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_sort"
         android:title="@string/sort_menu"
-        android:icon="@drawable/ic_list_white_24px"
+        android:icon="@drawable/ic_list_white"
         android:visible="true"
         app:showAsAction="always" >
         <menu>
