--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/trailer_play"
+        android:id="@+id/trailer_play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/medium_margin"
@@ -22,7 +22,7 @@
         android:id="@+id/trailer_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/trailer_play"
+        android:layout_toEndOf="@+id/trailer_play_button"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/medium_margin"
         android:layout_marginEnd="@dimen/medium_margin"
@@ -35,7 +35,7 @@
         android:id="@+id/review_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/trailer_play"
+        android:layout_below="@+id/trailer_play_button"
         android:layout_margin="@dimen/medium_margin"
         android:background="@color/colorLight" />
 
