--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -166,84 +166,15 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
+        <FrameLayout
             android:id="@+id/movie_trailers_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_overview_container" >
+            android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/movie_trailers_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/trailers_list"
-                android:layout_marginTop="@dimen/large_margin"
-                android:gravity="center"
-                android:text="@string/trailers"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textStyle="italic" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/trailers_list"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/movie_trailers_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/large_margin"
-                android:layout_marginTop="4dp" />
-
-            <View
-                android:id="@+id/review_divider"
-                android:layout_below="@id/trailers_list"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/large_margin"
-                android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorPrimary" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
+        <FrameLayout
+            android:id="@+id/movie_reviews_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_trailers_container" >
-
-            <TextView
-                android:id="@+id/movie_reviews_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/reviews_list"
-                android:layout_marginTop="@dimen/large_margin"
-                android:gravity="center"
-                android:text="@string/reviews"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textStyle="italic" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/reviews_list"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/movie_reviews_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/large_margin"
-                android:layout_marginTop="4dp" />
-
-            <View
-                android:id="@+id/end_divider"
-                android:layout_below="@id/reviews_list"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/large_margin"
-                android:layout_marginRight="@dimen/large_margin"
-                android:layout_marginTop="@dimen/medium_margin"
-                android:background="@color/colorPrimary" />
-
-        </RelativeLayout>
+            android:layout_height="wrap_content"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
